--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -65,7 +65,7 @@
         </a>
 
         <a class="card" id="link-dashboard" href="./dashboard.html">
-          <i class="fas fa-history"></i>
+          <i class="fas fa-history card-icon"></i>
           <h2>Dashboard</h2>
           <p>Monitoramento do progresso e bem-estar dos alunos.</p>
           <i class="fas fa-arrow-right card-arrow"></i>
