--- a/escola-qualidade-vida/frontend/public/ocorrencias.html
+++ b/escola-qualidade-vida/frontend/public/ocorrencias.html
@@ -1,52 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro de Ocorrência</title>
-
   <link rel="stylesheet" href="./css/ocorrencias.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap"
+    rel="stylesheet" />
   <script src="js/navbar-protection.js"></script>
-
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box }
-    body { font-family:'Open Sans',sans-serif; background:#f5f5f5; color:#333 }
-    header { background:linear-gradient(135deg,#0066cc 0%,#004d99 100%); color:#fff; position:sticky; top:0; z-index:1000 }
-    .header-content { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:15px 20px }
-    .logo-container { display:flex; align-items:center; gap:15px }
-    .logo { height:50px }
-    .logo-container h1 { font-size:1.5rem; font-weight:600; font-family:'Poppins',sans-serif }
-    .nav-toggle { display:none; background:none; border:none; color:#fff; font-size:1.5rem; cursor:pointer }
-    #navMenu { display:flex; list-style:none; gap:20px }
-    #navMenu a { color:#fff; text-decoration:none; padding:10px 15px; border-radius:5px; display:flex; align-items:center; gap:8px }
-    #navMenu a:hover { background:rgba(255,255,255,.1) }
-    .dropdown-content { display:none; position:absolute; background:#fff; min-width:200px; box-shadow:0 8px 16px rgba(0,0,0,.1); border-radius:5px; top:100%; left:0; z-index:1000 }
-    .dropdown:hover .dropdown-content { display:block }
-    .dropdown-content a { color:#333; padding:12px 16px; display:block; border-bottom:1px solid #eee }
-    .dropdown-content a:hover { background:#f5f5f5 }
-    main { max-width:1200px; margin:30px auto; padding:0 20px }
-    .container { background:#fff; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,.1); padding:30px }
-    .form-header { display:flex; align-items:center; gap:15px; margin-bottom:30px; padding-bottom:15px; border-bottom:2px solid #0066cc }
-    .form-header h2 { color:#0066cc; font-size:1.8rem; font-weight:600 }
-    label { font-weight:600; margin-bottom:5px; display:block }
-    input[type="text"], input[type="date"], select, textarea { width:100%; padding:12px 15px; border:2px solid #ddd; border-radius:5px; font-size:1rem }
-    textarea { min-height:120px; resize:vertical }
-    #sugestoes { background:#fff; border:2px solid #ddd; border-radius:5px; max-height:200px; overflow-y:auto; margin-top:5px; display:none; list-style:none; padding-left:0 }
-    #sugestoes li { padding:10px 15px; cursor:pointer; border-bottom:1px solid #eee }
-    #sugestoes li:hover { background:#f0f8ff }
-    #aluno_selecionado { display:none; align-items:center; gap:15px; background:#f8f9fa; padding:15px; border-radius:8px; border:2px solid #dee2e6; margin:15px 0 }
-    #foto_exibida { width:80px; height:80px; object-fit:cover; border-radius:50%; border:3px solid #0066cc }
-    button[type="submit"] { background:linear-gradient(135deg,#0066cc 0%,#004d99 100%); color:#fff; padding:15px 30px; border:none; border-radius:5px; font-size:1.1rem; font-weight:600; cursor:pointer; width:100%; margin-top:10px }
-    button[type="submit"]:hover { background:linear-gradient(135deg,#004d99 0%,#003366 100%) }
-    #alerta { display:none; padding:15px; border-radius:5px; margin-bottom:20px }
-    @media(max-width:768px){
-      .nav-toggle{display:block}
-      #navMenu{display:none; flex-direction:column; width:100%; background:#0066cc; position:absolute; top:100%; left:0; padding:20px}
-      #navMenu.show{display:flex}
-    }
-  </style>
 </head>
 
 <body>
@@ -58,9 +22,15 @@
       </div>
 
       <nav>
-        <button class="nav-toggle" id="navToggle"><i class="fas fa-bars"></i></button>
+        <button class="nav-toggle" id="navToggle">
+          <i class="fas fa-bars"></i>
+        </button>
+
         <ul id="navMenu">
-          <li><a href="./principal.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+          <li>
+            <a href="./principal.html" class="active"><i class="fas fa-home"></i> Home</a>
+          </li>
+
           <li class="dropdown">
             <a href="#"><i class="fas fa-user-graduate"></i> Alunos <i class="fas fa-chevron-down"></i></a>
             <div class="dropdown-content">
@@ -69,10 +39,22 @@
               <a href="./importar_alunos.html"><i class="fas fa-file-csv"></i> Importar CSV</a>
             </div>
           </li>
-          <li><a href="./turmas.html"><i class="fas fa-chalkboard"></i> Turmas</a></li>
-          <li><a href="./ocorrencias.html"><i class="fas fa-exclamation-triangle"></i> Ocorrências</a></li>
-          <li><a href="./dashboard.html"><i class="fas fa-history"></i> Dashboard</a></li>
-          <li><a href="./criar_usuario.html"><i class="fas fa-user-cog"></i> Usuários</a></li>
+
+          <li>
+            <a href="./turmas.html"><i class="fas fa-chalkboard"></i> Turmas</a>
+          </li>
+
+          <li>
+            <a href="./ocorrencias.html"><i class="fas fa-exclamation-triangle"></i> Ocorrências</a>
+          </li>
+
+          <li>
+            <a href="./dashboard.html"><i class="fas fa-history"></i> Dashboard</a>
+          </li>
+
+          <li>
+            <a href="./criar_usuario.html"><i class="fas fa-user-cog"></i> Usuários</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -80,50 +62,56 @@
 
   <main>
     <div class="container">
-      <div class="form-header">
-        <h2><i class="fas fa-exclamation-triangle"></i> Cadastrar Ocorrências</h2>
-      </div>
-
-      <div id="alerta"></div>
-
-      <label for="buscar_cpf">Buscar aluno por CPF:</label>
-      <input type="text" id="buscar_cpf" placeholder="Digite o CPF do aluno..." autocomplete="off" />
-      <ul id="sugestoes"></ul>
-
-      <div id="aluno_selecionado">
-        <img id="foto_exibida" src="" alt="Foto do Aluno" />
-        <div>
-          <strong id="nome_exibido"></strong><br />
-          <span id="matricula_exibida"></span>
+      <div class="form-container">
+        <div class="form-header">
+          <h2><i class="fas fa-exclamation-triangle"></i> Cadastrar Ocorrências</h2>
         </div>
+
+        <div id="alerta" style="display: none; padding: 15px; border-radius: 5px; margin-bottom: 20px;"></div>
+
+        <label for="buscar_cpf">Buscar aluno por CPF:</label>
+        <input type="text" id="buscar_cpf" placeholder="Digite o CPF do aluno..." autocomplete="off" />
+        <ul id="sugestoes" style="list-style: none; padding-left: 0;"></ul>
+
+        <div id="aluno_selecionado"
+          style="display: none; align-items: center; gap: 15px; background: #f8f9fa; padding: 15px; border-radius: 8px; border: 2px solid #dee2e6; margin: 15px 0;">
+          <img id="foto_exibida" src="" alt="Foto do Aluno"
+            style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%; border: 3px solid #0066cc;" />
+          <div>
+            <strong id="nome_exibido" style="font-size: 1.2rem; color: #333;"></strong><br />
+            <span id="matricula_exibida" style="color: #666;"></span>
+          </div>
+        </div>
+
+        <form id="ocorrenciaForm">
+          <input type="hidden" id="aluno_id" name="aluno_id" required />
+
+          <label for="tipo">Tipo de Ocorrência:</label>
+          <select id="tipo" name="tipo" required>
+            <option value="" selected disabled>Selecione uma opção...</option>
+            <!-- Os tipos serão carregados dinamicamente via JavaScript -->
+          </select>
+
+          <label for="descricao">Descrição:</label>
+          <textarea id="descricao" name="descricao" placeholder="Descreva a ocorrência em detalhes..."
+            required></textarea>
+
+          <label for="data_ocorrencia">Data da Ocorrência:</label>
+          <input type="date" id="data_ocorrencia" name="data_ocorrencia" />
+
+          <button type="submit">Cadastrar Ocorrência</button>
+        </form>
       </div>
-
-      <form id="ocorrenciaForm">
-        <input type="hidden" id="aluno_id" name="aluno_id" required />
-
-        <label for="tipo">Tipo de Ocorrência:</label>
-        <select id="tipo" name="tipo" required>
-          <option value="" selected disabled>Selecione uma opção...</option>
-        </select>
-
-        <label for="descricao">Descrição:</label>
-        <textarea id="descricao" name="descricao" placeholder="Descreva a ocorrência em detalhes..." required></textarea>
-
-        <label for="data_ocorrencia">Data da Ocorrência:</label>
-        <input type="date" id="data_ocorrencia" name="data_ocorrencia" />
-
-        <button type="submit">Cadastrar Ocorrência</button>
-      </form>
     </div>
   </main>
 
   <script>
-    const API_BASE = "http://localhost:5000";
-
-    document.getElementById('navToggle').addEventListener('click', () => {
+    // Toggle do menu mobile
+    document.getElementById('navToggle').addEventListener('click', function () {
       document.getElementById('navMenu').classList.toggle('show');
     });
 
+    // Variáveis globais
     const buscarCpf = document.getElementById("buscar_cpf");
     const sugestoesUl = document.getElementById("sugestoes");
     const alunoSelecionadoDiv = document.getElementById("aluno_selecionado");
@@ -135,46 +123,51 @@
     const alertaDiv = document.getElementById("alerta");
     const tipoSelect = document.getElementById("tipo");
 
+    // Carrega os tipos de ocorrência do backend
+    async function carregarTiposOcorrencia() {
+      try {
+        const response = await fetch("http://localhost:5000/ocorrencias/tipos");
+        const data = await response.json();
+
+        if (response.ok && data.tipos) {
+          tipoSelect.innerHTML = '<option value="" selected disabled>Selecione uma opção...</option>';
+
+          data.tipos.forEach(tipo => {
+            const option = document.createElement("option");
+            option.value = tipo;
+            option.textContent = tipo;
+            tipoSelect.appendChild(option);
+          });
+        }
+      } catch (err) {
+        console.error("Erro ao carregar tipos de ocorrência:", err);
+        mostrarAlerta("Erro ao carregar tipos de ocorrência", "erro");
+      }
+    }
+
+    // Função para mostrar alertas
     function mostrarAlerta(mensagem, tipo = "sucesso") {
       alertaDiv.textContent = mensagem;
       alertaDiv.style.display = "block";
       alertaDiv.style.backgroundColor = tipo === "sucesso" ? "#d4edda" : "#f8d7da";
       alertaDiv.style.color = tipo === "sucesso" ? "#155724" : "#721c24";
       alertaDiv.style.border = tipo === "sucesso" ? "1px solid #c3e6cb" : "1px solid #f5c6cb";
-      setTimeout(() => { alertaDiv.style.display = "none"; }, 5000);
+
+      setTimeout(() => {
+        alertaDiv.style.display = "none";
+      }, 5000);
     }
 
+    // Função para formatar CPF
     function formatarCPF(cpf) {
-      if (!cpf) return "";
-      cpf = String(cpf).replace(/\D/g, "");
-      if (cpf.length !== 11) return cpf;
-      return cpf.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, "$1.$2.$3-$4");
+      if (!cpf) return '';
+      cpf = cpf.replace(/\D/g, '');
+      return cpf.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
     }
 
-    async function carregarTiposOcorrencia() {
-      try {
-        const response = await fetch(`${API_BASE}/ocorrencias/tipos`);
-        const data = await response.json();
-
-        if (response.ok && data.tipos) {
-          tipoSelect.innerHTML = '<option value="" selected disabled>Selecione uma opção...</option>';
-          data.tipos.forEach(tipo => {
-            const opt = document.createElement("option");
-            opt.value = tipo;
-            opt.textContent = tipo;
-            tipoSelect.appendChild(opt);
-          });
-        } else {
-          mostrarAlerta("Não foi possível carregar os tipos.", "erro");
-        }
-      } catch (err) {
-        console.error(err);
-        mostrarAlerta("Erro ao carregar tipos de ocorrência.", "erro");
-      }
-    }
-
+    // 🔍 Busca alunos por CPF conforme o usuário digita
     buscarCpf.addEventListener("input", async () => {
-      const cpf = buscarCpf.value.trim().replace(/\D/g, "");
+      const cpf = buscarCpf.value.trim().replace(/\D/g, '');
       sugestoesUl.innerHTML = "";
 
       if (cpf.length !== 11) {
@@ -183,15 +176,27 @@
       }
 
       try {
-        const response = await fetch(`${API_BASE}/alunos/buscar?cpf=${cpf}`);
+        const response = await fetch(`http://localhost:5000/alunos/buscar?cpf=${cpf}`);
         const data = await response.json();
 
         if (response.ok && Array.isArray(data) && data.length > 0) {
           sugestoesUl.style.display = "block";
-
           data.forEach(aluno => {
             const li = document.createElement("li");
             li.textContent = `${aluno.nome} (CPF: ${formatarCPF(aluno.cpf)})`;
+            li.style.cursor = "pointer";
+            li.style.padding = "10px 15px";
+            li.style.borderBottom = "1px solid #eee";
+            li.style.transition = "background-color 0.2s";
+
+            li.addEventListener("mouseover", () => {
+              li.style.backgroundColor = "#f0f8ff";
+            });
+
+            li.addEventListener("mouseout", () => {
+              li.style.backgroundColor = "";
+            });
+
             li.addEventListener("click", () => selecionarAluno(aluno));
             sugestoesUl.appendChild(li);
           });
@@ -199,20 +204,23 @@
           sugestoesUl.style.display = "none";
         }
       } catch (err) {
-        console.error(err);
+        console.error("Erro ao buscar alunos:", err);
         sugestoesUl.style.display = "none";
       }
     });
 
+    // 🎯 Seleciona aluno e exibe foto
     function selecionarAluno(aluno) {
       alunoSelecionadoDiv.style.display = "flex";
-      nomeExibido.textContent = aluno.nome || aluno.nome_completo || "Aluno";
+      nomeExibido.textContent = aluno.nome;
       matriculaExibida.textContent = `CPF: ${formatarCPF(aluno.cpf)}`;
       alunoIdInput.value = aluno.id;
 
-      // foto_url vem como "/uploads/xxx" no seu backend -> completar com API_BASE
+      // Monta URL da foto
       if (aluno.foto_url) {
-        fotoExibida.src = aluno.foto_url.startsWith("http") ? aluno.foto_url : `${API_BASE}${aluno.foto_url}`;
+        fotoExibida.src = aluno.foto_url;
+      } else if (aluno.foto) {
+        fotoExibida.src = `http://localhost:8080/uploads/${aluno.foto}`;
       } else {
         fotoExibida.src = "./img/sem-foto.png";
       }
@@ -222,24 +230,29 @@
       buscarCpf.value = formatarCPF(aluno.cpf);
     }
 
+    // 📤 Envio do formulário de ocorrência
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
+      // Validação básica: precisa ter aluno escolhido
       if (!alunoIdInput.value) {
         mostrarAlerta("Selecione um aluno antes de cadastrar a ocorrência.", "erro");
         buscarCpf.focus();
         return;
       }
 
+      // Validação do tipo
       if (!tipoSelect.value) {
         mostrarAlerta("Selecione um tipo de ocorrência.", "erro");
         tipoSelect.focus();
         return;
       }
 
+      // Validação da descrição
       const descricao = document.getElementById("descricao").value.trim();
       if (!descricao) {
         mostrarAlerta("A descrição da ocorrência é obrigatória.", "erro");
+        document.getElementById("descricao").focus();
         return;
       }
 
@@ -248,11 +261,10 @@
         tipo: tipoSelect.value,
         descricao: descricao,
         data_ocorrencia: document.getElementById("data_ocorrencia").value || null
-        // ✅ NÃO manda turma_id — backend pega do aluno
       };
 
       try {
-        const response = await fetch(`${API_BASE}/ocorrencias/`, {
+        const response = await fetch("http://localhost:5000/ocorrencias/", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(payload)
@@ -271,15 +283,17 @@
           matriculaExibida.textContent = "";
         } else {
           mostrarAlerta(data.erro || "Erro ao cadastrar ocorrência.", "erro");
-          console.error("Detalhes:", data);
+          console.error("Detalhes do erro:", data.detalhes || data);
         }
       } catch (error) {
-        console.error(error);
+        console.error("Erro ao cadastrar ocorrência:", error);
         mostrarAlerta("Falha ao conectar com o servidor. Tente novamente.", "erro");
       }
     });
 
+    // Carrega os tipos ao iniciar a página
     document.addEventListener("DOMContentLoaded", carregarTiposOcorrencia);
   </script>
 </body>
+
 </html>
